--- a/bookstore-code/.htaccess
+++ b/bookstore-code/.htaccess
@@ -1,3 +1,19 @@
+DirectoryIndex index.php
+
+Options -Indexes
+#Options +FollowSymlinks
+
+<Files define.php>
+Order Allow,Deny
+Deny from all
+</Files>
+<Files define_notice.php>
+Order Allow,Deny
+Deny from all
+</Files>
+
+
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
@@ -13,7 +29,7 @@ RewriteRule		my-account.html 	    index.php?module=frontend&controller=user&acti
 RewriteRule		change-password.html 	index.php?module=frontend&controller=user&action=reset_password
 RewriteRule		history.html 		    index.php?module=frontend&controller=user&action=history
 
-RewriteRule		book.html		    index.php?module=frontend&controller=book&action=list [QSA]
+RewriteRule		book.html		        index.php?module=frontend&controller=book&action=list [QSA]
 
 RewriteRule		success-buy.html 		index.php?module=frontend&controller=index&action=notice&type=success-buy
 RewriteRule		success-login.html 		index.php?module=frontend&controller=index&action=notice&type=success-login
