task-id-0018: 1/ Fix Font Css 2/ Fix Swert Alert 2 Css 3/ Update PHP Mailer - Not yet 4/ Update Bulk Action Backend Javascript

--- a/bookstore-code/.htaccess
+++ b/bookstore-code/.htaccess
@@ -36,8 +36,8 @@ RewriteRule		index.html 			    index.php?module=frontend&controller=index&action
 RewriteRule		category.html 		    index.php?module=frontend&controller=category&action=index [QSA]
 RewriteRule		register.html 		    index.php?module=frontend&controller=index&action=register
 RewriteRule		login.html 			    index.php?module=frontend&controller=index&action=login
-#RewriteRule		cart.html 			    index.php?module=frontend&controller=user&action=cart
-RewriteRule		cart.html(.*) 			    index.php?module=frontend&controller=user&action=cart [QSA]
+RewriteRule		cart.html 			    index.php?module=frontend&controller=user&action=cart
+#RewriteRule		cart.html(.*) 			    index.php?module=frontend&controller=user&action=cart [QSA]
 RewriteRule		my-account.html 	    index.php?module=frontend&controller=user&action=index
 RewriteRule		change-password.html 	index.php?module=frontend&controller=user&action=reset_password
 RewriteRule		history.html 		    index.php?module=frontend&controller=user&action=history
