--- a/bookstore-code/public/template/admin/adminlte/template.ini
+++ b/bookstore-code/public/template/admin/adminlte/template.ini
@@ -1,14 +1,15 @@
-title	=	"Template Adminlte DUC"
+; title	=	"Template Adminlte DUC"
 
 metaHTTP[]	= "content-type|text/html; charset=utf-8"
 metaHTTP[]	= "X-UA-Compatible|IE=edge"
-
 metaName[]	= "viewport|width=device-width, initial-scale=1"
 
 dirCss		= "css"
 fileCss[]	= "fontawesome-free/css/all.min.css"
 fileCss[]	= "ionicons/css/ionicons.min.css"
 fileCss[]	= "overlayScrollbars/css/OverlayScrollbars.min.css"
+; fileCss[]	= "sweetalert2/sweetalert2.css"
+fileCss[]	= "sweetalert2/sweetalert2.min.css"
 fileCss[]	= "adminlte.min.css"
 fileCss[]	= "custom.css"
 
