--- a/bookstore-code/.htaccess
+++ b/bookstore-code/.htaccess
@@ -36,17 +36,17 @@ RewriteRule		index.html 			    index.php?module=frontend&controller=index&action
 RewriteRule		category.html 		    index.php?module=frontend&controller=category&action=index [QSA]
 RewriteRule		register.html 		    index.php?module=frontend&controller=index&action=register
 RewriteRule		login.html 			    index.php?module=frontend&controller=index&action=login
+RewriteRule		forgot.html              index.php?module=frontend&controller=index&action=forgot
 RewriteRule		cart.html 			    index.php?module=frontend&controller=user&action=cart
-#RewriteRule		cart.html(.*) 			    index.php?module=frontend&controller=user&action=cart [QSA]
 RewriteRule		my-account.html 	    index.php?module=frontend&controller=user&action=index
 RewriteRule		change-password.html 	index.php?module=frontend&controller=user&action=reset_password
 RewriteRule		history.html 		    index.php?module=frontend&controller=user&action=history
 RewriteRule		success-buy.html 		index.php?module=frontend&controller=index&action=notice&type=success-buy
 RewriteRule		success-login.html 		index.php?module=frontend&controller=index&action=notice&type=success-login
 RewriteRule		not-found.html 		    index.php?module=frontend&controller=index&action=notice&type=not-found
-
 RewriteRule		book.html		        index.php?module=frontend&controller=book&action=list [QSA]
 #RewriteRule    book.html(.*)		    index.php?module=frontend&controller=book&action=list$1 [QSA]
+
 #RewriteRule ^search(.*)                index.php?module=frontend&controller=book&action=list&$1 [QSA]
 #RewriteRule ^sort(.*)                  index.php?module=frontend&controller=book&action=list&$1 [QSA]
 
